--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,55 +1,86 @@
-.product-grid{
+.product-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 20px;
     margin-top: 20px;
-}
-
-.product{
-    display:flex;
-    position: relative;
+  }
+  
+  .product {
+    display: flex;
     flex-direction: column;
     align-items: center;
     padding: 10px;
-    height: auto;
-    border:  1px solid black;
-}
-.product-button{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding: 12px;
-    border: none;
-    text-align: center;
-    cursor: pointer;
-    background-color:red;
-    color: white;
-}
-.product-button:hover{
-    background-color: aqua;
-}
-.product img{
+    height: 100%;
+    border: 1px solid black;
+    position: relative;
+  }
+  
+  .product img {
     width: 100%;
     height: 200px;
     object-fit: cover;
-}
-
-.product h2{
-    margin-top: 10px;
-    margin-bottom: 45px;
+  }
+  
+  .product h2 {
+    margin: 10px 0;
     font-size: 18px;
     font-weight: bold;
     text-align: center;
-}
-
-.price{
+  }
+  
+  .price {
     background-color: chartreuse;
     color: white;
     font-size: 12px;
     padding: 4px;
     border-radius: 50%;
-    position:absolute;
+    position: absolute;
     top: 8px;
     right: 8px;
-}
+  }
+  
+  .buttons-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: auto; /* Pushes the container to the bottom */
+  }
+  
+  .basket, .product-button {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    color: white;
+    margin-top: 5px;
+  }
+  
+  .basket {
+    background-color: green;
+  }
+  
+  .basket:hover {
+    background-color: darkgreen;
+  }
+  
+  .favorites-icon {
+    color: red;
+    cursor: pointer;
+    margin-top: 5px;
+    text-align: center;
+    font-size: 24px; /* Adjust the size of the icon as needed */
+  }
+  
+  .favorites-icon:hover {
+    color: darkred;
+  }
+  
+  .product-button {
+    background-color: red;
+  }
+  
+  .product-button:hover {
+    background-color: aqua;
+  }
+  
